fix aqbout section overflow

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 }
 
 html {
+   overflow-x: hidden;
   font-size: 100%;
 }
 
@@ -420,21 +421,18 @@ header.navbar {
   text-transform: uppercase;
 }
 
-.about-content .why {
-  align-self: flex-start;
-  padding: 2rem 0.8rem;
-}
-
 .about-content .iso {
   width: 80px;
   position: absolute;
   right: 1rem;
   bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .about-content .iso img {
   border-radius: 3px;
-  margin: 10px;
 }
 
 .about-corner {
@@ -847,7 +845,7 @@ header.navbar {
   font-size: var(--font-md);
   font-weight: 600;
   margin-bottom: 0.5rem;
-  line-height: 1;
+  line-height: 1.5;
   color: var(--primary-color);
 }
 
@@ -1268,9 +1266,15 @@ form #message::placeholder {
   margin: 1rem 0;
 }
 
-#soc .certificate img, #soc .certificate a{
+#soc .certificate img{
   border-radius: 3px;
+   background-color: rgb(250, 250, 250);
+   padding: 5px;
 }
+
+ #soc .certificate a{
+  border-radius: 3px;
+ }
 
 /* whatsapp contacts */
 .whatsapp-float {
@@ -1386,10 +1390,12 @@ form #message::placeholder {
     box-shadow: var(--box-shadow);
     animation: dropdown 0.4s ease-in-out;
     z-index: 999;
+    gap: 1.5rem;
   }
 
   .nav-links a {
     font-size: 1.8rem;
+    padding: 0 1rem
   }
 
   header.navbar {
@@ -1474,11 +1480,12 @@ form #message::placeholder {
 
 
   .dropdown-content a{
-    font-size: var(--font-md);
+    font-size: 1.5rem;
   }
 
    .has-submenu .dropdown-content2 li{
    margin-left: 1rem;
+   padding: 1rem 0;
    }
  
   /* Use a class toggled by JS to open/close menus */
@@ -1602,7 +1609,6 @@ form #message::placeholder {
   }
 
   .about-content p {
-    font-size: var(--font-sm);
     text-shadow: 0.1px 0.1 0.1px rgba(253, 251, 251, 0.336);
   }
 
@@ -1706,6 +1712,10 @@ form #message::placeholder {
 
   .blog-card-wrapper {
     width: 100%;
+  }
+
+  .cta-footer input[type="email"] {
+      width: 90%;  
   }
 
   .contact-section {
